# golf-generator-wasm

./: README.md  asset-manifest.json  index.html  install.js  package.json  precache-manifest.0c20587d2104e2988e06d12137bc6d6b.js  precache-manifest.22b997db3c7ad4322d30dc3b4c8a64e5.js  precache-manifest.29258c9eb37eb81838fc5572943fba3b.js  precache-manifest.311d4b6a6fac6887da0aef6f0f30da87.js  precache-manifest.3e67744d8a821bba3cfb964d4e777958.js  precache-manifest.40004be91c3cd9cef752f17ff61842be.js  precache-manifest.5fa8461bb96aa282dadf690ea0c16f90.js  precache-manifest.739f614d41d5781e42d3ebdf2e0e283a.js  precache-manifest.b460577ec0e52e69bb2e6d78005982a4.js  precache-manifest.b8ada3cb11a775c36b9f6b51bbd53462.js  precache-manifest.bcacc2b607fd24cd92eaa7f8c8af5dc7.js  precache-manifest.ef9008aa95d0fb82f2ce017720440bb3.js  service-worker.js
public/: index.html  manifest.json
src/: App.js
src/components/: Main.js  SpringComponent.js
src/useWasm/: index.js
static/css/: 2.63b65d4e.chunk.css  2.63b65d4e.chunk.css.map  main.3d6103cd.chunk.css  main.3d6103cd.chunk.css.map
static/js/: 2.71412b09.chunk.js  2.71412b09.chunk.js.map  2.c2245e96.chunk.js  2.c2245e96.chunk.js.map  2.ee8b39ab.chunk.js  2.ee8b39ab.chunk.js.map  3.0c72ff3e.chunk.js  3.0c72ff3e.chunk.js.map  3.57ffa753.chunk.js  3.57ffa753.chunk.js.map  3.ecfa5302.chunk.js  3.ecfa5302.chunk.js.map  main.26d30e73.chunk.js  main.81210765.chunk.js  (+10 more)
wasm/: Cargo.toml
wasm/src/: course.rs  lib.rs  point.rs  spline.rs  vector.rs
wasm/src/flubber/: add.rs  interpolate.rs  math.rs  mod.rs  normalize.rs  rotate.rs
(+1 files in other folders)
